[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = "基于 fastapi 异步 web 框架的博客项目"
authors = ["lan <lanzy.nice@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dynaconf = "^3.1.12"
sqlalchemy = "^2.0.15"
mysqlclient = "^2.1.1"
pydantic = "^1.10.8"
fastapi = "^0.95.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example_blog = "blog.cmdline:main"